--- a/src/main/Todo.txt
+++ b/src/main/Todo.txt
@@ -1,10 +1,20 @@
 Todo:
+Priority HIgh:
+ - design a level class.
  - make an npc list draw all characters in a smart way.
+ - make a level loader and a demo level is a smart way. 
  - make AI's (several) for the npcs in a smart way.
-
-
 
  - make the world
  - - make buildings (remember the debug_stuff)
  - - make interactions (remember the debug_stuff)
  - 
+ - make the menuScreen
+ - make the pauseScreen
+
+Priority Medium:
+ - make some sort of cutScene ai that makes the characters do a cutScene.
+
+
+Priority Low:
+ - make the stop of the walk more accurate. 
