--- a/src/main/Todo.txt
+++ b/src/main/Todo.txt
@@ -2,6 +2,7 @@ Todo:
 Priority HIgh:
  - make fighting abilities
  - - find a way to check if the punch ability's hitbox hits anyone. 
+ - - Maybe every character has a method that is called by the eventbus and the punch calls the eventbus?
  - make cooldowns for abilities. maybe have a list of abilites on cooldown. 
  - make basic fighting AI that the nightclub guards can use for example. 
  - make characters blink when they get hit. 
