--- a/src/main/Todo.txt
+++ b/src/main/Todo.txt
@@ -3,6 +3,7 @@ Priority HIgh:
  - make different gamestates: 
  - make gameover screen (can be an image over the whole screen for now, 
  - can add a leading in dying cutscene later). ye. and make it so that you can quit or restart at the last level entry. 
+ - make buttons. ScreenClass? A screen only has buttons and screens.
  - make the menuScreen
  - make the pauseScreen (can be an image over the whole screen forever). 
 
@@ -17,6 +18,7 @@ Priority HIgh:
  - (exactly like shooting))
 
 Priority Medium:
+ - fix dashing so that the new destination is set before the moving happens. 
  - make targetable property actually work. 
  - make a red vignett when you have low health. 
  - make a dying cutscene. 
@@ -31,7 +33,8 @@ Priority Medium:
 
 
 Priority Low:
- - light engine.
+ - lighting.
  - emotes :D
  - make the player animations better. 
+ - make buttons highlightable.
  - make more items?
