--- a/src/main/Todo.txt
+++ b/src/main/Todo.txt
@@ -1,8 +1,8 @@
 Todo:
 Priority HIgh:
+ - make the how to play screen and an empty chapter selection screen. 
  - make gameover screen (can be an image over the whole screen for now, 
  - can add a leading in dying cutscene later). ye. and make it so that you can quit or restart at the last level entry. 
- - make the menuScreen
  - make the pauseScreen (can be an image over the whole screen forever). 
 
  - make cutscenes?
@@ -17,6 +17,7 @@ Priority HIgh:
 
 Priority Medium:
  - fix dashing so that the new destination is set before the moving happens. 
+ - implement good chapterselectionscreen.
  - make targetable property actually work. 
  - make a red vignett when you have low health. 
  - make a dying cutscene. 
