added a shit ton of art bro.

--- a/src/main/Todo.txt
+++ b/src/main/Todo.txt
@@ -1,6 +1,5 @@
 Todo:
 Priority HIgh:
- - make cutscenes? (they can actually just be animations i make in aseprite using the charactersprites)
 
  - implement the short story
  - make some art and add some music (just kinda demo music rly)
@@ -12,7 +11,7 @@ Priority Medium:
  - make it so that characters stop walking action when they hit a wall. 
  - (make an ability where you can pull a feather out of the pillow and throw it on people 
  - (exactly like shooting))
- - fix dashing so that the new destination is set before the moving happens. 
+ - fix dashing so that the new destination is set before the moving happens. Also its completely broken and the speed gets fucked. 
  - implement good chapterselectionscreen.
  - make targetable property actually work. 
  - make a red vignett when you have low health. 
