--- a/src/main/Todo.txt
+++ b/src/main/Todo.txt
@@ -4,6 +4,10 @@ Priority HIgh:
  - make some art and add some music (just kinda demo music rly)
  - make a pistol shooter boss fight that dashes around you :D (nightclub owner) 
  - (he shoots a lot and has to reload)
+ 
+ - lag ein liten video av spelet for innleveringen. 
+Bonuspoeng: Dere får 1 poeng for å inkludere en video av applikasjonen. Last den opp på f.eks. 
+Youtube (videoen kan være privat) og legg til en link i README.md.
 
 
 Priority Medium:
